--- a/templates/app.html
+++ b/templates/app.html
@@ -3,10 +3,9 @@
 <head>
     <title>Test</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='combined.min.css')}}" />
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='redactor.css')}}" />
-    <script type="text/javascript" src="{{url_for('static', filename='combined.min.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='redactor.js')}}"></script>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/redactor.min.css')}}" />
+    <script type="text/javascript" src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/redactor.min.js')}}"></script>
 
     <script type="text/javascript">
     $(document).ready(
