--- a/templates/app.html
+++ b/templates/app.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Test</title>
+    <title>Pagedit</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/redactor.min.css')}}" />
+</head>
+<body>
+    <div id="page">
+    <textarea id="content" name="content"></textarea>
+    </div>
     <script type="text/javascript" src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/redactor.min.js')}}"></script>
-
+    <script type="text/javascript" src="{{url_for('static', filename='js/custom.js')}}"></script>
     <script type="text/javascript">
     $(document).ready(
         function()
         {
-            $('#redactor_content').redactor({
-                fixed: true,
+            $('#content').redactor({
+                plugins: ['save'],
+                placeholder: 'Add content...',
+                toolbarFixed: true,
                 clipboardUploadUrl: '/_/images/paste',
                 imageUpload: '/_/images/add',
                 fileUpload: '/_/files/add',
@@ -21,15 +29,5 @@
         }
     );
     </script>
-
-</head>
-<body>
-    <div id="page">
-    <textarea id="redactor_content" name="content">
-        <h2>Hello and Welcome</h2>
-        <p>I never did quite grasp him, though he endeavored to explain it to me upon numerous occasions.  I suge app handling the ancient archives of the race.</p>
-        <p>During this period my thoughts were continually upon Dian the Beautiful.  I was, of course, glad that she had escaped the Mahars, and the fate that had been suggested by the Sagoth who had threatened to purchase her upon our arrival at Phutra.  I often wondered if the s not much aid to us—his attitude was of one who waits for the miracle to come to him.</p>
-    </textarea>
-    </div>
 </body>
 </html>
