--- a/templates/app.html
+++ b/templates/app.html
@@ -14,8 +14,23 @@
     </div>
     <script type="text/javascript" src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/redactor.min.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='js/custom.js')}}"></script>
     <script type="text/javascript">
+    if (!RedactorPlugins) var RedactorPlugins = {};
+    RedactorPlugins.save = {
+        init: function ()
+        {
+            this.buttonAdd('save', 'Save', this.saveButton);
+            this.buttonAwesome('save', 'fa-save');
+        },
+        saveButton: function(buttonName, buttonDOM, buttonObj, e)
+        {
+            $.ajax({
+                url: '/_/contents/save?url={{page.url}}',
+                type: 'post',
+                data: 'content=' + $('#content').redactor('get')
+            });
+        }
+    };
     $(document).ready(
         function()
         {
