Make all files local

--- a/templates/app.html
+++ b/templates/app.html
@@ -3,7 +3,7 @@
 <head>
     <title>Pagedit</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/font-awesome.min.css')}}" />
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/redactor.min.css')}}" />
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/custom.css')}}" />
 </head>
